@@ -12,10 +12,10 @@ AUX logitechmediaserver-bin-7.8_pre20140105-client-playlists-gentoo.patch 395 SH
 AUX logitechmediaserver-bin-7.8_pre20140105-fix-transition-sample-rates2.patch 5351 SHA256 96809cd24a48e3ffe9849967b8ae426ddbda43388399a5ace39e1753afc16c70 SHA512 db80f58129e3d60cdc6fbf3d039827cb55906ceafcf1f91c5425eae88b7d87a0d9ccf2847ac304fe24ca5e3b57b002f3c4f6a33a3d7d6838f93bbce1dc506432 WHIRLPOOL 080d19a145419437c041ff6c196392c5bad1dfd5a5dee6e9de9f09a44acc2d841899f8442b5b10be9bb3da6cf3d889392fcaa3c97eb42a5ff5060b425c367f0c
 AUX logitechmediaserver-bin-7.8_pre20140105-remove-softlink-target-check.patch 502 SHA256 069005bba8fe7f18965b128d0207361b849ebf4049c6ee02da15d810cf8e847b SHA512 6f5ca88f52bb2c243e730803e4677850a774ce0fffc69b0e98a5f2dfd682594433ff9714870b62aaf028ee5f691da2902b0e104129759d3945b95fd70e200d99 WHIRLPOOL 0a2f394bc666f53c51a0ded947d4544c0250114afa8be34b829e995ce8de2329922da3272e1700ebf0053a6533819c4ebe7f98dc9cd1c800db6a193b884d3e15
 AUX logitechmediaserver-bin-7.8_pre20140105-uuid-gentoo.patch 525 SHA256 032f9edec613661f691797934cf73191c8ac94269cff59773c365f20603f01c4 SHA512 4c8a65893842aa9c0be21b3ad59fcf9f350e4c1b169099f4ffafe18b298ee7860693d529a3a7d81d7f4251bad5904f975e26e5fc2a33312003354bdda3e4bb87 WHIRLPOOL e74772fec480bc46d73073d5ce11e6052758ef20f636e99a74498ae3fe624b96241f3df7d36f63a94b34dbfc3017385872ada16698c6ff6c6f4c33e471c88348
-AUX logitechmediaserver.conf.d 693 SHA256 8f36a922ab2e5b48f7d2ae6d0dcb413d173a6efb8463bdf2008886653e9a9dc1 SHA512 9eea4aa5839a785fdff72f93ff94023b18d7e866be6ccd55d2a431f87b6fded131ae8edbecb06b630bb1a99b383a93c9f4f8b03afeda11a3a9007a03fcb58bc7 WHIRLPOOL d8970727e772ec42a7a0d03f1e145845286e4f3bb945b162e0a4332c1c1e261b8a8da640abf2a8d74be0449045a12567385ab6ae82f8185ab7d6f2894af633b9
-AUX logitechmediaserver.init.d 1208 SHA256 60b917c12205bf3d00a62e218513fce388dbb669a813e2926f8350cd9d0b012d SHA512 1ae58d69515a53c8528498e52a50b50f522d11b788648147e41105c814c0182b60c9555e2caf4d10a818434e23590cfe1b67fc6967ebc7c444c1636c3d219565 WHIRLPOOL 00b7ff061a5be78d1e241e123bedd33ebea811fe283cb45836c8633fa64f9833438326f2d5dee5c5321abf15f9fa6f594ad9cf1d7382fbfa9bee4c1ac824db4c
+AUX logitechmediaserver.conf.d 477 SHA256 4a2a77f66f35e6ea9867784de04c7552cfe36d9d583bf423ab2e871f85606713 SHA512 686c00e7a28df15369aad74d46700d5a943bf539a57828f83e313d82014c8610c41481aff2678908f90f6bf702c0ac5408bfc7909b155c21ddc5fec21fccac28 WHIRLPOOL 615d2acdeb804507082fe858925a16c228e7d07199ead5443219a5a78c891ae035b7e9046e9a4487e8c838f288d8421fd3cc642a38a0ee21ed3d919c3f673df3
+AUX logitechmediaserver.init.d 1137 SHA256 797d465978b29712fa53148b23fc9eed59f22d2c56e3e53273874fb244388666 SHA512 f2d639b64bb4ec6dbbdd1e197f6ae1b88e1512bea5de894f89214300e6e2fd5767fea1d3377c6dafcf62d3d2c733546f5df21ae515dfd7b3b379f2ceece30007 WHIRLPOOL bf76830f401bb155f8a370520917509d4ca49b7972a0a5830c3bad55ac9a8a2e5071b3ef15c408ff9aec78595eba7c6ac0df0b9f3ec82e3eb029a804a6fae0cf
 AUX logitechmediaserver.logrotate.d 347 SHA256 82fd4cdb8537b610ec220545afc606c4b39481d449c08215073732fa27a247d0 SHA512 5787166d7318e494c574e965f47f6074805371283f5fd33955e02302ba43ffc64b2aa18f1c5a081d23ba49fb76cf512cfd966e5d68496fa54c05f911bab422b6 WHIRLPOOL 297329d107bc41846a4cc617c5cb05983e2839372b2684801d01ecea171d7a31603659d539e19b31559338de1702334d053c174acab697eda3d5f09e01c0efc5
-AUX logitechmediaserver.service 568 SHA256 aadb04bf122d55eec81473bde2b8a9fe438fcce240e01a522be29a0ac76261c2 SHA512 d84a3b7b497d3e4b1ce89c4f15b1a1b736a5516aa63b674d66a9e01e62ebc99e98de3a68c296c5a3423aad68ce04f2f4e2812ef77bf4dffafa086df40eafe279 WHIRLPOOL 574785b186c8bce5fbf639fed3274b89216ecc2d5ad58afbbddfcb87b197af5858fc63d7394d678b4ba517063715c5d81c30c0defcebb6d3aa6858e5aaef695e
+AUX logitechmediaserver.service 505 SHA256 b3042d06c4ed0217888d3d94ac78825b47bf2f667a6662c98781bd1fcc3781f4 SHA512 e07226d91a9806ff2c57e5868ef1cabbcda3bd90df0de3447071ee5d9b9b014a15c4b85885c0682b556addb8a103daf2a60a0d06539ea64decb75e7b84ad957b WHIRLPOOL 3a6846ccbd14ce5a167e72cbf97c9c316e99ff77f6c690887861e61376c3fdb975008be2f625ec946e01feab567fd21b35bad5b8331a699502f3243a67a9dc4b
 DIST cd49c0fd9518fdc978d8e32c668c76f506ad5bbd.zip 157365878 SHA256 56186340710612691c5e4b1dae54880f38162d3ec1f152a7c48e1b94a886d959 SHA512 79f704bd4f1f44ff07d27aa4aede46f7b039436b474778c46b4a6e1a777aee68f7c9708b431994912306e5c46f884f23da9a3892704a305d3a89e80c711495bf WHIRLPOOL 70a11d0e6da93e9e46e04260467437d2540a41f34525b76ac0cb8a659e20e40d2d9c7619c46d3c4148b963d1c6e9e4106efc24e70c788b045f900ab5b5873db5
 DIST logitechmediaserver-7.7.2.tgz 128376300 SHA256 d7e6c2c49d4d4060e28ba5ada39be3553807b6f3949116371aa4d1ea53510e2b SHA512 7982557947d31f3c92cc1efa6fa14324e01b80cbd0d27d1a6f7528ec2e14f534d2eca43e1772b6de1dded9eff3950b978e7be7079bd57361d651a298170b66e3 WHIRLPOOL 51e59690b971ae431731b88e273671a718d8ff8057db710681a3c7859265006ea82be46df94944e0a79dca012dcae96fe2afd9069fef343fa5b6cca2a490e739
 DIST logitechmediaserver-7.7.3.tgz 105690719 SHA256 829c78859ba7e460a79b3700341a1265d8c3dbdb1f679adff3fb407549828c4f SHA512 0c6d5b45f6ee98513f21400421e7fe6f6aae63e6a9040b50dec8250344574b3fbf1d10b75e336ccceba93198240b77cd1f177e1556438d4e32f8f91450625a30 WHIRLPOOL dfd7f426982119751ffb66268cba0506362c24fec23c0b9193e4339037d1a2dfb001d92a0efff2ed1e965a3b80560726cd740d56cf8a876ad8ae0cd05eddc59b
