@@ -1,10 +1,5 @@
 # /etc/conf.d/logitechmediaserver
 
-# Default path of your music library and playlists.  You can leave these
-# undefined and configure them through the web interface instead.
-#LMS_MUSIC_DIR="/mnt/media/Music"
-#LMS_PLAYLISTS_DIR="/mnt/media/Playlists"
-
 # The following contains any other options you want to specify, such as default
 # logging options.  The example below will prevent the discovery and display of
 # UPnP devices within your players.
