@@ -11,7 +11,7 @@ User=logitechmediaserver
 Group=logitechmediaserver
 WorkingDirectory=/opt/logitechmediaserver
 EnvironmentFile=/etc/conf.d/logitechmediaserver
-ExecStart=/opt/logitechmediaserver/slimserver.pl --prefsdir=/etc/logitechmediaserver --cachedir=/var/lib/logitechmediaserver/cache --logfile=syslog --audiodir=${LMS_MUSIC_DIR} --playlistdir=${LMS_PLAYLISTS_DIR} $LMS_OPTS
+ExecStart=/opt/logitechmediaserver/slimserver.pl --prefsdir=/etc/logitechmediaserver --cachedir=/var/lib/logitechmediaserver/cache --logfile=syslog $LMS_OPTS
 
 [Install]
 WantedBy=network.target
